--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "fabpot/php-cs-fixer": "0.4.0",
+        "friendsofphp/php-cs-fixer": "0.4.0",
         "indeyets/pake": "~1.99",
         "kriswallsmith/assetic": "1.1.2",
         "leafo/lessphp": "v0.4.0",
