--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 vendor
 examples/resume/_*.md
-examples/output/*.html
-examples/output/*.pdf
+# examples/output/*.html
+# examples/output/*.pdf
 .tmp_pdf_source.html
 
 # OSX files
